--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title> Virtual DOM </title>
+    <link rel="icon"
+          type="image/png"
+          href="favicon.png">
   </head>
   <body>
     <div id="virtual-dom-outer"></div>
